--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 app.cors.allowed-origins=http://localhost:3000
 logging.level.org.springframework.security=DEBUG
+spring.jackson.time-zone=Europe/Istanbul
